@@ -46,6 +46,7 @@ VERSION 2.6-Beta 1
 
   CHANGES:
     * Make delete key work in Saved Playlists.
+    * Delete and Shift + Delete keys now work as expected in collection browser.
     * Preserve statistics when copying or moving tracks to Local Collection.
     * Common album actions such as Show cover, Show under Various Artists are now
       available for all collections that support it, not just Local collection.
